@@ -20,6 +20,48 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|request
+operator|.
+name|LocalSolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|request
+operator|.
+name|SolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|NamedList
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|xml
 operator|.
 name|sax
@@ -37,6 +79,16 @@ operator|.
 name|parsers
 operator|.
 name|ParserConfigurationException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|StringTokenizer
 import|;
 end_import
 
@@ -171,6 +223,108 @@ name|ee
 argument_list|)
 throw|;
 block|}
+block|}
+comment|/**    * Returns a Request object based on the admin/pingQuery section    * of the Solr config file.    */
+DECL|method|getPingQueryRequest
+specifier|public
+specifier|static
+name|SolrQueryRequest
+name|getPingQueryRequest
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+block|{
+comment|// TODO: check for nested tags and parse as a named list instead
+name|String
+name|urlSnippet
+init|=
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"admin/pingQuery"
+argument_list|,
+literal|""
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+name|StringTokenizer
+name|qtokens
+init|=
+operator|new
+name|StringTokenizer
+argument_list|(
+name|urlSnippet
+argument_list|,
+literal|"&"
+argument_list|)
+decl_stmt|;
+name|String
+name|tok
+decl_stmt|;
+name|NamedList
+name|params
+init|=
+operator|new
+name|NamedList
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|qtokens
+operator|.
+name|hasMoreTokens
+argument_list|()
+condition|)
+block|{
+name|tok
+operator|=
+name|qtokens
+operator|.
+name|nextToken
+argument_list|()
+expr_stmt|;
+name|String
+index|[]
+name|split
+init|=
+name|tok
+operator|.
+name|split
+argument_list|(
+literal|"="
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|split
+index|[
+literal|0
+index|]
+argument_list|,
+name|split
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+name|params
+argument_list|)
+return|;
 block|}
 block|}
 end_class
